--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             color: white;
             font-family: sans-serif;
             padding: 20px;
-            overflow: hidden;
+            overflow-y: auto;
             position: relative;
         }
 
