--- a/templates/index.html
+++ b/templates/index.html
@@ -49,8 +49,8 @@
     </style>
 </head>
 <body>
-    <h1>バフ計算アプリ</h1>
-
+     <h1>❄ White Out Survival バフ計算機 ❄</h1>
+     <p>Presented by ココ先生 form #2501</p>
     <form method="post">
         <div class="section">
             <h2>味方の兵数</h2>
